<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity">

    <com.zio.ziospace.customviews.AppBar
        android:id="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:Title="Settings"
        app:backEnable="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/capriola"
                android:text="    My Profile "
                app:drawableStartCompat="@drawable/ic_icon_set_prof" />

            <Button
                android:id="@+id/edit_prof"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/icon_next"
                android:drawableRight="@drawable/icon_next"
                android:fontFamily="sans-serif"
                android:letterSpacing="0"
                android:onClick="click"
                android:padding="0dp"
                android:text="Edit My Profile "
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/grey" />

            <Button
                android:id="@+id/change_pass"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/icon_next"
                android:drawableRight="@drawable/icon_next"
                android:fontFamily="sans-serif"
                android:letterSpacing="0"
                android:onClick="click"
                android:padding="0dp"
                android:text="Change Password"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/grey" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/capriola"
                android:text="    Notifications "
                app:drawableStartCompat="@drawable/ic_icon_set_notify" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch1"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:trackTint="@color/grey" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch2"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:trackTint="@color/grey" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/capriola"
                android:text="    Display "
                app:drawableStartCompat="@drawable/ic_icon_set_disp" />

            <com.zio.ziospace.customviews.ThemeChooser
                android:id="@+id/chs_theme"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/icon_next"
                android:drawableRight="@drawable/icon_next"
                android:fontFamily="sans-serif"
                android:letterSpacing="0"
                android:onClick="click"
                android:padding="0dp"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/capriola"
                android:text="    Help "
                app:drawableStartCompat="@drawable/ic_icon_set_help" />

            <Button
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/icon_next"
                android:drawableRight="@drawable/icon_next"
                android:fontFamily="sans-serif"
                android:letterSpacing="0"
                android:onClick="click"
                android:padding="0dp"
                android:text="Help / Support "
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/grey" />

            <Button
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/icon_next"
                android:drawableRight="@drawable/icon_next"
                android:fontFamily="sans-serif"
                android:letterSpacing="0"
                android:onClick="click"
                android:padding="0dp"
                android:text="Terms and Conditions "
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/grey" />

            <Button
                android:id="@+id/policy"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/icon_next"
                android:drawableRight="@drawable/icon_next"
                android:fontFamily="sans-serif"
                android:letterSpacing="0"
                android:onClick="click"
                android:padding="0dp"
                android:text="Privacy Policy "
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/capriola"
                android:text="    More "
                app:drawableStartCompat="@drawable/ic_icon_set_more" />

            <Button
                android:id="@+id/mentor"
                android:layout_width="match_parent"

                android:layout_height="30dp"
                android:layout_gravity="start"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/icon_next"
                android:drawableRight="@drawable/icon_next"
                android:fontFamily="sans-serif"
                android:letterSpacing="0"
                android:onClick="click"
                android:padding="0dp"
                android:text="Become a Mentor"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/grey" />

            <Button
                android:id="@+id/share_app"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/icon_next"
                android:drawableRight="@drawable/icon_next"
                android:fontFamily="sans-serif"
                android:letterSpacing="0"
                android:onClick="click"
                android:padding="0dp"
                android:text="Refer a Friend  "
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/grey" />


            <Button
                android:id="@+id/logout1"
                android:onClick="click"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="logout " />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/appversion"
                android:textColor="@color/grey"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>